# SmartMailbox

./: .gitignore  README.md
client/: .gitignore  README.md  config.toml  main.py  pyproject.toml
client/src/: camera.py  config.py  image_processing.py  main.py
client/src/client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
create_test_images/: Cargo.toml
create_test_images/src/: main.rs
server/: .gitignore  README.md  pyproject.toml
server/app/: dependencies.py  main.py
server/app/db/: api.py  database.db  database.db-journal  model.py
server/app/internal/: admin.py
server/app/processing/: process_images.py  process_response.py  process_zipfile.py  uploaded_images.py
server/app/routers/: images.py
server/tests/: ai.md  db.py  model_tests_framework.py  qwen3.py  tesseract_llama.py  test_images.py
server/tests/model/: analysis_notebook.py  logger.py  main.py  model_tests_framework.py  qwen3.py  run_all_tests.py  taking_pictures.py  tesseract_llama.py  update_db.py
server/tests/model/db/: api.py  letters.csv  model.py
