[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "ruff>=0.14.2",
    "seaborn>=0.13.2",
    "ty>=0.0.17",
]
